--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "carbon-tutorial",
+  "name": "equifax-mobile",
   "version": "0.0.0",
   "private": true,
   "repository": "git@github.com:carbon-design-system/carbon-tutorial.git",
   "bugs": "https://github.com/carbon-design-system/carbon-tutorial/issues",
   "license": "Apache-2.0",
+  "proxy": "http://localhost:3001/api",
   "scripts": {
     "build": "react-scripts build",
     "ci-check": "yarn format:diff",
@@ -14,26 +15,37 @@
     "format:diff": "prettier --list-different \"**/*.{js,md,scss}\"",
     "format:staged": "prettier --write",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "server": "node-env-run server --exec nodemon | pino-colada",
+    "dev": "run-p server start"
   },
   "dependencies": {
     "@carbon/grid": "^10.6.0",
     "@carbon/icons-react": "^10.3.0",
+    "axios": "^0.19.2",
     "carbon-components": "^10.3.0",
     "carbon-components-react": "^7.3.0",
+    "cors": "^2.8.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
+    "fetch": "^1.1.0",
+    "node-env-run": "^3.0.2",
+    "node-fetch": "^2.6.0",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.5.2",
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^7.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.17.0"
   },
   "eslintConfig": {
